test/features/errors/semantic/e1065_invalid_return_type.spl
# E1065: Invalid Return Type

Feature: E1065 - Function Return Type Error
  As a Simple compiler
  I want to detect invalid return types
  So that function return types are properly declared

  Background:
    Given I have the Simple compiler

  Scenario: Return type not allowed
    When I compile:
      '''
      fn test() -> mut i32:  # Error: mut not allowed in return type
        42
      '''
    Then I should see error E1065 at line 1
    And the error message should be "function return type error: {message}"
    And the label should indicate "invalid return type"
    And the help should suggest "check the function return type declaration"

  Scenario: Valid return types
    When I compile:
      '''
      fn get_value() -> i32:
        42

      fn get_string() -> String:
        "hello"
      '''
    Then compilation should succeed

  Scenario: Korean language error
    Given I set compiler language to "ko"
    When I compile:
      '''
      fn test() -> mut i32:
        42
      '''
    Then I should see error E1065
    And the error message should contain "잘못된 반환 타입"
